--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
 
       - name: Type check
-        run: npm run typecheck
+        run: npx tsc --noEmit --project tsconfig.build.json
 
       - name: Lint
         run: npm run lint
